--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -14,7 +14,7 @@
 }
 
 .container-movie h1, h3, strong, p {
-    margin: 12px 0;
+    margin: 12px 5px;
     color: #fff;
     text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.377);
     text-align: justify;
