--- a/src/pages/Error/error.css
+++ b/src/pages/Error/error.css
@@ -12,7 +12,7 @@
 
 .error-link {
     text-decoration: none;
-    background-color: #116feb;
+    background-color: #1B2B47;
     color: #fff;
     padding: 10px;
     border-radius: 10px;
