--- a/src/pages/Favorites/favorites.css
+++ b/src/pages/Favorites/favorites.css
@@ -24,7 +24,7 @@
     flex-direction: row;
     justify-content: space-between;
     margin: 10px 0;
-    background-color: #116FEB;;
+    background-color: #1B2B47;;
     padding: 5px;
     border-radius: 10px;
     
