--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #116FEB;
+    background-color: #1B2B47;
     color: #fff;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -46,7 +46,7 @@
     justify-content: center;
     padding: 10px;
     font-size: 22px;
-    background-color: #116FEB;
+    background-color: #1B2B47;
     text-decoration: none;
     color: #fff;
     border-bottom-left-radius: 10px;
@@ -56,7 +56,7 @@
 
 .container-list a:hover {
     background-color: #fff;
-    color: #116FEB;
+    color: #1B2B47;
 }
 
 .container-header {
