--- a/src/pages/Movie/movie.css
+++ b/src/pages/Movie/movie.css
@@ -32,22 +32,15 @@
     cursor: pointer;
     border: 0;
     font-size: 18px;
-    transition: all 0.5s;
     border-radius: 8px;
+    transition: all 0.5s;
 }
 
 .wrapper-buttons button:hover {
-    background-color: #1B2B47;
-    color: #fff;
-
+    transform: scale(1.07);
 }
 
 .wrapper-buttons a {
     text-decoration: none;
     color: #000;
-    transition: all 0.5s;
-}
-
-.wrapper-buttons:hover a {
-    color: #fff;
 }
