--- a/src/pages/Favorites/favorites.css
+++ b/src/pages/Favorites/favorites.css
@@ -23,11 +23,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     margin: 10px 0;
-    background-color: #1B2B47;;
-    padding: 5px;
+    background-color: #00000042;;
+    padding: 10px;
     border-radius: 10px;
-    
 }
 
 .wrapper-movie span {
@@ -40,8 +40,14 @@
 }
 
 .movie-options button {
-    cursor: pointer;
     border-radius: 4px;
-    padding: 2px;
+    padding: 7px;
     border: 0;
+}
+
+.movie-options button:hover {
+    cursor: pointer;
+    background-color: #1B2B47;
+    color: #FFF;
+    transition: 0.3s;
 }
