--- a/src/pages/Favorites/favorites.css
+++ b/src/pages/Favorites/favorites.css
@@ -13,6 +13,9 @@
 #no-film {
     display: flex;
     justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    margin: 20px;
 }
 
 .container ul {
@@ -49,5 +52,5 @@
     cursor: pointer;
     background-color: #1B2B47;
     color: #FFF;
-    transition: 0.3s;
+    transition: 0.5s;
 }
