--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -124,4 +124,27 @@
     .container-list img {
         max-height: 200px;
     }
+
+    .searchBar {
+        background-color: #FFF;
+        padding-left:5px;
+        border:none;
+        border-radius: 4px;
+        height: 25px;
+        width: 175px;
+      }
+    
+  }
+
+  @media (max-width: 390px) {
+
+    .searchBar {
+        background-color: #FFF;
+        padding-left:5px;
+        border:none;
+        border-radius: 4px;
+        height: 25px;
+        width: 125px;
+      }
+    
   }
